--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     restart: unless-stopped
     ports:
       - "127.0.0.1:8080:8080"
-    environment:
-      - SUPERSET_CONFIG_PATH=/app/superset_home/test_config.py
+    # environment:
+      # - SUPERSET_CONFIG_PATH=/app/superset_home/test_config.py
     volumes:
       - ./scripts/entrypoint.sh:/app/superset_home/entrypoint.sh
-      - ./tests/superset_test_config.py:/app/superset_home/test_config.py
+      # - ./tests/superset_test_config.py:/app/superset_home/test_config.py
