Add a response hook that handles OAuth token refreshing. While here, use requests_oauthlib to handle OAuth headers

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifiers =
 packages = supersetapiclient
 install_requires =
     requests >= 2.0.0
+    requests-oauthlib
     pyyaml >= 6.0
 python_requires = >=3.6
 
