Adding unit test for init client with mocking

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,5 +18,5 @@ install_requires =
 python_requires = >=3.6
 
 [options.extras_require]
-dev = flake8; pytest;
+dev = flake8; pytest; requests-mock;
 build = build;
