--- a/.github/workflows/python-package.yaml
+++ b/.github/workflows/python-package.yaml
@@ -19,6 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
+          pip install .[dev]
       - name: Lint with flake8
         run: |
           # fully comply to pep8
