--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ install_requires =
     requests >= 2.0.0
     requests-oauthlib
     pyyaml >= 6.0
+    cached_property;python_version<"3.8"
 python_requires = >=3.6
 
 [options.extras_require]
