--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3.7"
 services:
   superset:
-    image: apache/superset:1.3.1
+    image: "apache/superset:${SUPERSET_VERSION}"
     container_name: superset_app
     command: ["bash", "/app/superset_home/entrypoint.sh"]
     tty: true
     restart: unless-stopped
     ports:
       - "127.0.0.1:8080:8080"
-    # environment:
+    environment:
+      - LOAD_EXAMPLES="${LOAD_EXAMPLES}"
       # - SUPERSET_CONFIG_PATH=/app/superset_home/test_config.py
     volumes:
       - ./scripts/entrypoint.sh:/app/superset_home/entrypoint.sh
