Add coverage reporting in tests

--- a/.github/workflows/python-package.yaml
+++ b/.github/workflows/python-package.yaml
@@ -24,6 +24,6 @@ jobs:
         run: |
           # fully comply to pep8
           flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest
+      - name: Test with pytest and coverage
         run: |
-          pytest tests
+          pytest -cov=supersetapiclient tests
