--- a/setup.cfg
+++ b/setup.cfg
@@ -20,5 +20,5 @@ install_requires =
 python_requires = >=3.6
 
 [options.extras_require]
-dev = flake8; pytest; requests-mock; pytest-docker
+dev = flake8; pytest; requests-mock; pytest-docker; pytest-cov
 build = build
