--- a/.github/workflows/python-package.yaml
+++ b/.github/workflows/python-package.yaml
@@ -26,3 +26,4 @@ jobs:
       - name: Test with pytest and coverage
         run: |
           pytest -cov=supersetapiclient tests
+          coveralls --service=github
