Make GitHub token available to coveralls

--- a/.github/workflows/python-package.yaml
+++ b/.github/workflows/python-package.yaml
@@ -24,6 +24,8 @@ jobs:
           # fully comply to pep8
           flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest and coverage
+        env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pytest -cov=supersetapiclient tests
           coveralls --service=github
