--- a/setup.cfg
+++ b/setup.cfg
@@ -20,5 +20,20 @@ install_requires =
 python_requires = >=3.6
 
 [options.extras_require]
-dev = flake8; pytest; requests-mock; pytest-docker; pytest-cov; coveralls
+dev = flake8; black; isort; pytest; requests-mock; pytest-docker; pytest-cov; coveralls; pre-commit
 build = build
+
+[flake8]
+ignore = E203, E266, E501, W503
+max-line-length = 127
+max-complexity = 18
+select = B,C,E,F,W,T4
+exclude = .git,.venv,.tox
+
+[isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+line_length=127
+profile=black
