Updating development setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,16 @@ install_requires =
 python_requires = >=3.6
 
 [options.extras_require]
-dev = flake8; black; isort; pytest; requests-mock; pytest-docker; pytest-cov; coveralls; pre-commit
+dev =
+    flake8
+    black
+    isort
+    pytest
+    requests-mock
+    pytest-docker
+    pytest-cov
+    coveralls
+    pre-commit
 build = build
 
 [flake8]
