Transformando field dataclasses json_metadata em uma class json_metadata Metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,9 @@ install_requires =
     requests-oauthlib
     pyyaml >= 6.0
     cached_property;python_version<"3.8"
+    anytree >= 2.9.0
+    shortuuid >= 1.0.11
+
 python_requires = >=3.6
 
 [options.extras_require]
@@ -30,6 +33,8 @@ dev =
     pytest-cov
     coveralls
     pre-commit
+    anytree
+    shortuuid
 build = build
 
 [flake8]
