--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ install_requires =
     cached_property;python_version<"3.8"
     anytree >= 2.9.0
     shortuuid >= 1.0.11
+    ordered-set >= 4.1.0
 
 python_requires = >=3.6
 
@@ -33,8 +34,7 @@ dev =
     pytest-cov
     coveralls
     pre-commit
-    anytree
-    shortuuid
+
 build = build
 
 [flake8]
