--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,29 +1,16 @@
-# See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
+default_stages: [commit]
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v4.1.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
       - id: check-added-large-files
-  - repo: local
-    hooks:
-      - id: black
-        name: black
-        stages: [ commit ]
-        entry: black --check --diff
-        language: system
-        types: [ python ]
-      - id: isort
-        name: isort
-        stages: [ commit ]
-        entry: isort --check --diff
-        types: [ python ]
-        language: system
-      - id: flake8
-        name: flake8
-        stages: [ commit ]
-        entry: flake8
-        types: [ python ]
-        language: system
+      - id: check-case-conflict
+      - id: check-merge-conflict
+      - id: check-symlinks
+      - id: check-yaml
+        files: .*\.(yaml|yml)$
+      - id: detect-private-key
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
+      - id: trailing-whitespace
+        stages: [push]
